[metadata]
name = cloudflare-update-dns
version = 0.0.1
author = Gustavo de Oliveira Silva (DIG)
description = Update dns in cloudflare
long_description = file:README.md
license = CC BY-ND 4.0
license_files = license.txt
url = https://github.com/DIG-/cloudflare-update-dns
project_urls =
    Bug Tracker = https://github.com/DIG-/cloudflare-update-dns/issues
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
packages = find:
package_dir =
    =src
python_requires = >=3.7
;install_requires =
;    appdirs>=1.4.3
;    termcolor>=1.1.0
;    colorama>=0.4.3 ; platform_system == 'Windows'

[options.packages.find]
where=src